# pico_xs

./: '  .gitignore  Cargo.toml  LICENSE-BSD3  README.md  build.rs  device.x  link.ld  link2.x  linkscript.ld  me.x  memory.x  my_script.ld  print_vtable.sh  script.sh
.cargo/: config  config.toml  rust-analyzer.toml
examples/: blinky.rs  clocks.rs  gpio_in.rs  rom.rs  timer.rs  timer_interrupt.rs  watchdog.rs  xosc.rs
src/: __vectors.rs  clocks2.rs  final_registers.rs  final_utils.rs  gpio.rs  handlers.rs  interrupt.rs  interrupts.rs  io.rs  lib.rs  main.md  main.rs  pads.rs  pins.rs  regs.rs  reset.rs  sio.rs  timer.rs  usb.md  usb.rs  usb_test.rs  usb_xs.rs  vector_table.rs  watchdog.rs  xs.rs
src/asm/: asm.s
src/c/: clocks.c  reset.c  usb_init.c  usb_init.h
src/hardware/: mod.rs  resets.rs  sioxd.rs
src/include/: a.h  resets.h  uart.h
src/include/old/: cmsis_gcc.h  cmsis_version.h  mpu_armv7.h
src/registers/: clocks.rs  io_bank.rs  mod.rs  pads_bank.rs  ppb.rs  ppb_base.rs  resets.rs  rom.rs  sio.rs  sosc.rs  timer.rs  uart.c  uart.rs  usb_ctrl.rs  watchdog.rs  xosc.rs
src/vector_table/: exceptions.rs  handlers.rs  interrupts.rs  mod.rs  reset_handler.c  reset_handler.rs
