[package]
name = "pico-hal-xs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.4"
embedded-hal = "1.0.0"
panic-halt = "0.2.0"
rp-pico = "0.9.0"
rp2040-hal = "0.10.2"
