

[package]
name = "pico-hal-xs"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.4"
# embedded-hal = "1.0.0"
rp-pico = "0.9.0"
rp2040-hal = "0.10.2"
critical-section = { version = "1.0.0" }
# pico-sdk = "0.3.1"
# libusb = "0.3.0"

vcell = "0.1.2"
[build-dependencies]
cc = "1.0"

